# adparse

./: Cargo.toml
adocs/: sample.adoc
src/: adoc.pest  lib.rs  main.rs
tests/: cli.rs
