[package]
name = "adparse"
version = "0.1.0"
authors = ["etoal83 <etoal83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
